--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    APCSA Lowell, Nathanuel Chan
+		    click fast
 	    </footer>
 	</body>
 </html>
